Details
Description
0.4.9-RC-35-g3eb03ef down to at least 0.4.0rls is affected (most likely since forever)
When you have a large listview where automatically new text is pushed into (autoscroll to bottom is activated).
You can see that in almost all NSIS installers for example, in this case I used the Orwell DevCPP one from rapps, but as said, you can use almost everyone.
A trivial issue for itself, but eventually it helps us to better understand some of our other scrollbar issues.
Observed behavior
The small-triangle-arrows of the scrollbar do flash erroneously.
 0.4.9-RC-35-g3eb03ef__triangles.webm
 0.4.9-RC-35-g3eb03ef__triangles.webm
 bootcd-65496-dbg affected as well, very old issue.
 bootcd-65496-dbg affected as well, very old issue.
Expected behavior
On 2k3 those scrollbar triangles do not flash, they are drawn enabled the whole time.
Nothing gets logged when performing that.
Attachments
Issue Links
- is blocked by
- 
                    CORE-16735 Scrollbars theming regression, sometimes a themed scrollbar is not drawn until you hover it with the mouse -         
- Resolved
 
-         
- 
                    CORE-18048 Scrollbars theming, is not displayed until you hover the mouse cursor over it, within a Richedit control -         
- Resolved
 
-         
- 
                    CORE-17769 Scrollbars unthemed, Rapps Listview manual resize may erroneously not draw the triangles sometimes -         
- Resolved
 
-         
- 
                    CORE-17780 Scrollbars theming, is not displayed until you hover the mouse cursor over it, after scrolling the rapps treeview with the mouse-wheel -         
- Resolved
 
-         
- 
                    CORE-18593 CMD Don't redraw scrollbar if scrollbar is hidden -         
- Resolved
 
-         
- is duplicated by
- 
                    CORE-11561 Notepad scrollbars problem -         
- Resolved
 
-         
- relates to
- 
                    CORE-16672 [WIN32SS] Scrolling with the mouse-wheel within a putty console Window (or dragging any window in ros above another), makes the min/max/close buttons flash horribly -         
- Open
 
-         
- 
                    CORE-14685 Win32SS assertions while using WinSpy together with FamiTracker (followed by BSODs) -         
- Resolved
 
-